# rust-incubator

./: Cargo.toml  README.md  log.txt
0_basics/: README.md
0_basics/day01_ownership_borrowing/: Cargo.toml  README.md
0_basics/day01_ownership_borrowing/examples/: 01_ownership.rs  02_borrowing.rs  03_mut_borrow.rs  04_slices.rs  05_word_count.rs
0_basics/day02_building_abstractions/: Cargo.toml  README.md
0_basics/day02_building_abstractions/examples/: 01_generics.rs  02_traits.rs  03_dispatch.rs  04_result_option.rs  05_logger_project.rs
0_basics/day03_memory_management/: Cargo.toml  README.md
0_basics/day03_memory_management/examples/: 01_box.rs  02_rc_refcell.rs  03_tree_rc_refcell.rs  04_arc_mutex.rs  05_drop.rs
1_concepts/1_1_default_clone_copy/: README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_2_box_pin/: Cargo.toml
1_concepts/1_2_box_pin/src/: main.rs
1_concepts/1_3_rc_cell/src/: main.rs
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: README.md
1_concepts/1_5_convert_cast_deref/src/: main.rs
1_concepts/1_6_dispatch/: Cargo.toml
1_concepts/1_6_dispatch/src/: lib.rs  main.rs  serial_tests.rs
1_concepts/1_7_sized/src/: main.rs
1_concepts/1_8_thread_safety/: Cargo.toml
1_concepts/1_8_thread_safety/src/: main.rs
1_concepts/1_9_phantom/: Cargo.toml
1_concepts/1_9_phantom/src/: main.rs  phantom_examples.rs
1_concepts/src/: main.rs
2_idioms/2_1_type_safety/src/: main.rs
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/src/: main.rs
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: main.rs
3_ecosystem/: Cargo.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/btreemap_proc_macro/: Cargo.toml
3_ecosystem/3_2_macro/btreemap_proc_macro/src/: lib.rs
3_ecosystem/3_2_macro/src/: lib.rs  main.rs
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/: Cargo.toml
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: lib.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs
3_ecosystem/src/: main.rs
4_backend/: Cargo.toml
4_backend/4_1_db/: Cargo.toml
4_backend/4_1_db/src/: main.rs
4_backend/4_2_http/: Cargo.toml
4_backend/4_2_http/src/: main.rs
4_backend/4_3_api/: Cargo.toml
4_backend/4_3_api/src/: main.rs
4_backend/src/: main.rs
