[workspace]
members = [
    "0_basics/day01_ownership_borrowing",
    "0_basics/day02_building_abstractions",
    "0_basics/day03_memory_management",
    "1_concepts",
    "1_concepts/1_*",
    "2_idioms",
    "2_idioms/2_*",
    "3_ecosystem",
    "3_ecosystem/3_*",
    "4_backend",
    "4_backend/4_*",
]
