[package]
name = "step_4"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-graphql = "7"
async-graphql-axum = "7"
axum = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
