[package]
name = "step_3_11"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
num_cpus = "1.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.10"
