[package]
name = "step_3_6"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
humantime-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
