[package]
name = "step_3_8"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.10"
