[package]
name = "step_4_2"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
