[package]
name = "step_4_3"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
utoipa = { version = "4.2", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
