[package]
name = "step_4_3"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"], default-features = false }
uuid = { version = "1.8", features = ["serde", "v4"] }
utoipa = { version = "4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }
anyhow = "1.0"
